       - https://qunitjs.com/upgrade-guide-2.x/

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The context processor "creme_core.context_processors.get_entities_deletion_allowed"
              is now deprecated (it injected "ENTITIES_DELETION_ALLOWED" in contexts) ;
              it has been removed from the default settings.
            - In 'creme_core.models' :
                - The method 'header_filter.HeaderFilterManager.create_if_needed()
                 is deprecated; use the method 'proxy()' instead.
                - The method 'search.SearchConfigItemManager.create_if_needed()'
                  is deprecated; use the method 'builder()' instead.
        # The declarative possibilities of 'creme_core.management.commands.creme_populate.BasePopulator'
          have been extended; new class attributes are :
             - BUTTONS
             - HEADER_FILTERS
             - RELATION_TYPES
             - SEARCH
          Note: you should probably use 'RelationType.objects.builder()' instead of
                'RelationType.objects.smart_update_or_create()' when it's possible,
                because the last method will be removed in a futur version.
        # The models which can be used by EntityFilters (i.e. CremeEntity gets a
          ForeignKey/ManyToManyField to the model) should have a method 'portable_key()',
          & their default manager should have a method 'get_by_portable_key()'.
          See the doc-string of 'CremeEntity.portable_key()' for more details.
        # In 'creme_core.models':
             - The models 'CremePropertyType' & 'RelationType' get a JSON field
               "extra_data" which can be used by third party code.
             - The models 'EntityFilter', 'HeaderFilter' & 'UserRole' got fields "created" & "modified".
             - The models 'CremeProperty' got a field "created".
             - The models 'CremeUser' got a field "modified".
        # App :