@@ -6,8 +6,12 @@ from django.utils.translation import gettext as _
 from django.utils.translation import ngettext
 from parameterized import parameterized
 
-from creme.creme_core.bricks import TrashBrick, TrashCleanerJobErrorsBrick
-from creme.creme_core.creme_jobs import reminder_type, trash_cleaner_type
+from creme.creme_core.bricks import TrashBrick  # TrashCleanerJobErrorsBrick
+from creme.creme_core.creme_jobs import reminder_type
+from creme.creme_core.creme_jobs.trash_cleaner import (
+    TrashCleanerJobErrorsBrick,
+    trash_cleaner_type,
+)
 from creme.creme_core.models import (
     CremeProperty,
     CremePropertyType,
