@@ -79,7 +79,8 @@ class _CruditySynchronizeType(JobType):
 
     @property
     def results_bricks(self):
-        from creme.creme_core.bricks import JobResultsBrick
+        # from creme.creme_core.bricks import JobResultsBrick
+        from creme.creme_core.gui.job import JobResultsBrick
         return [JobResultsBrick()]
 
 
